--- a/04_Estructuras_Repetitivas/Untitled-1.ipynb
+++ b/04_Estructuras_Repetitivas/Untitled-1.ipynb
@@ -1,122 +1,292 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "faf3382d",
+   "metadata": {},
+   "source": [
+    "1) Crea un programa que imprima en pantalla todos los números enteros desde 0 hasta 100\n",
+    "(incluyendo ambos extremos), en orden creciente, mostrando un número por línea."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d077f286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i in range(0, 101):\n",
+    "    print(i, end=\", \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fa6d0da",
+   "metadata": {},
+   "source": [
+    "2) Desarrolla un programa que solicite al usuario un número entero y determine la cantidad de\n",
+    "dígitos que contiene."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "de1b5c8c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n"
+      "Tiene 2 dígitos\n"
      ]
     }
    ],
    "source": [
-    "dad = 0  \n",
-    "for i in range(0, 100):\n",
-    "    print(i)"
+    "entero = int(input('Ingrese un número: '))\n",
+    "cantidad_digitos = len(str(entero))\n",
+    "print(f'Tiene {cantidad_digitos} dígitos')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe3bec0",
+   "metadata": {},
+   "source": [
+    "3) Escribe un programa que sume todos los números enteros comprendidos entre dos valores\n",
+    "dados por el usuario, excluyendo esos dos valores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20909fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paso 1: Pedimos los dos números al usuario\n",
+    "a = int(input(\"Ingrese el primer número: \"))\n",
+    "b = int(input(\"Ingrese el segundo número: \"))\n",
+    "\n",
+    "# Paso 2: Aseguramos que 'a' sea el menor y 'b' el mayor (los ordenamos)\n",
+    "if a > b:\n",
+    "    a, b = b, a  # intercambiamos los valores\n",
+    "\n",
+    "# Paso 3: Usamos un rango que empiece en a+1 y termine en b (excluye b automáticamente)\n",
+    "suma = 0\n",
+    "for i in range(a + 1, b):\n",
+    "    suma += i  # vamos sumando cada número\n",
+    "\n",
+    "# Paso 4: Mostramos el resultado\n",
+    "print(f\"La suma de los enteros entre {a} y {b} es: {suma}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34420184",
+   "metadata": {},
+   "source": [
+    "4) Elabora un programa que permita al usuario ingresar números enteros y los sume en\n",
+    "secuencia. El programa debe detenerse y mostrar el total acumulado cuando el usuario ingrese\n",
+    "un 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "25a0e0fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total acumulado: 23596\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "while True:\n",
+    "    numero = int(input(\"Ingrese un número (0 para terminar): \"))\n",
+    "    if numero == 0:\n",
+    "        break\n",
+    "    total += numero\n",
+    "print(\"Total acumulado:\", total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea59a1e8",
+   "metadata": {},
+   "source": [
+    "5) Crea un juego en el que el usuario deba adivinar un número aleatorio entre 0 y 9. Al final, el\n",
+    "programa debe mostrar cuántos intentos fueron necesarios para acertar el número."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c6ff37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "secreto = random.randint(0, 9)\n",
+    "intentos = 0\n",
+    "\n",
+    "while True:\n",
+    "    intento = int(input(\"Adivine el número (0 a 9): \"))\n",
+    "    intentos += 1\n",
+    "    if intento == secreto:\n",
+    "        break\n",
+    "print(\"¡Adivinaste en\", intentos, \"intentos!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d764451b",
+   "metadata": {},
+   "source": [
+    "6) Desarrolla un programa que imprima en pantalla todos los números pares comprendidos\n",
+    "entre 0 y 100, en orden decreciente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa7072f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100, -1, -1):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc40c487",
+   "metadata": {},
+   "source": [
+    "7) Crea un programa que calcule la suma de todos los números comprendidos entre 0 y un\n",
+    "número entero positivo indicado por el usuario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5228c9b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input(\"Ingrese un número positivo: \"))\n",
+    "suma = sum(range(n + 1))\n",
+    "print(\"La suma es:\", suma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c5fe9f4",
+   "metadata": {},
+   "source": [
+    "8) Escribe un programa que permita al usuario ingresar 100 números enteros. Luego, el\n",
+    "programa debe indicar cuántos de estos números son pares, cuántos son impares, cuántos son\n",
+    "negativos y cuántos son positivos. (Nota: para probar el programa puedes usar una cantidad\n",
+    "menor, pero debe estar preparado para procesar 100 números con un solo cambio)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25729fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(cantidad):\n",
+    "    num = int(input(\"Ingrese un número: \"))\n",
+    "    if num % 2 == 0:\n",
+    "        pares += 1\n",
+    "    else:\n",
+    "        impares += 1\n",
+    "    if num < 0:\n",
+    "        negativos += 1\n",
+    "    elif num > 0:\n",
+    "        positivos += 1\n",
+    "\n",
+    "print(\"Pares:\", pares)\n",
+    "print(\"Impares:\", impares)\n",
+    "print(\"Negativos:\", negativos)\n",
+    "print(\"Positivos:\", positivos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a6b1693",
+   "metadata": {},
+   "source": [
+    "9) Elabora un programa que permita al usuario ingresar 100 números enteros y luego calcule la\n",
+    "media de esos valores. (Nota: puedes probar el programa con una cantidad menor, pero debe\n",
+    "poder procesar 100 números cambiando solo un valor)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea05c4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suma = 0\n",
+    "cantidad = 100\n",
+    "\n",
+    "for _ in range(cantidad):\n",
+    "    num = int(input(\"Ingrese un número: \"))\n",
+    "    suma += num\n",
+    "\n",
+    "media = suma / cantidad\n",
+    "print(\"Media:\", media)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5eed80b8",
+   "metadata": {},
+   "source": [
+    "10) Escribe un programa que invierta el orden de los dígitos de un número ingresado por el\n",
+    "usuario. Ejemplo: si el usuario ingresa 547, el programa debe mostrar 745."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f764dc56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número invertido: 432\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = input(\"Ingrese un número: \")\n",
+    "invertido = numero[::-1]\n",
+    "print(\"Número invertido:\", invertido)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c071d8fe",
+   "metadata": {},
+   "source": [
+    "aa"
    ]
   }
  ],
